# simple_file_server

./: .gitignore  Cargo.toml  build.rs  build_all.bat
app/: package-lock.json  package.json  vite.config.js
app/file_page/: App.css  App.jsx  index.html  index.jsx  media_display.css  media_display.jsx
app/public/: api.jsx  async-fetch.jsx
app/public_src/: api.jsx  click-outside.jsx  sidebar.css  sidebar.jsx  utils.jsx
app/src/: App.css  App.jsx  entry.css  entry.jsx
res/: api.js  index.html  index1.html
src/: api.rs  dir_info.rs  get_router.rs  html.rs  lib.rs  main.rs  sending_structs.rs  utils.rs
tests/: macrotest.rs
