[package]
name = "simple_file_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["macros"] }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.174", features = ["serde_derive", "derive"] }
tower-http = { version = "0.4.3", features = ["full", "fs", "trace"] }
serde_json = "1.0.103"
image = "0.24.6"
walkdir = "2.3.3"
md5 = '0.7.0'
stupid_utils = "0.2.3"
clap = { version = "4.3.21", features = ["derive"] }
[profile.small]
inherits = "release"
opt-level = "z"
lto = "fat"
[profile.release]
lto = "fat"
